# ai-dungeon-master

./: .dockerignore  .env.example  .gitignore  ACTION_SUGGESTIONS_README.md  APPLY_THESE_FIXES.md  BUGFIXES_COMPLETE.md  CHANGELOG.md  CODE_VALIDATION_AUDIT.md  CRITICAL_BUGFIXES.md  CRITICAL_FIXES_COMPLETE_REPORT.md  CRITICAL_ISSUES_DETAILED_ANALYSIS.md  CRITICAL_ISSUES_FIX.md  CRITICAL_RECOVERY_STEPS.md  Dockerfile  FINAL_CRITICAL_FIXES.md  FINAL_STATUS_REPORT.md  FIXES_APPLIED_FINAL.md  FIXES_APPLIED_SUMMARY.md  FIXES_SUMMARY.md  FIX_MODEL_CONFIGURATION.md  FIX_TIMEOUT_PARAMETER_ERROR.md  IMPLEMENTATION_SUMMARY.md  LATEST_FIXES.md  MODEL_CONFIGURATION_GUIDE.md  Makefile  PHASE_3_BUG_FIXES.md  PHASE_3_FIXES_SUMMARY.md  PHASE_3_GAMELOOP_ERROR_FIX.md  PHASE_3_GAMEPLAY_GUIDE.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_PRODUCTION_STATUS.md  PHASE_3_QUICK_START.md  PHASE_3_SESSION_LOADING_EXPLAINED.md  PHASE_3_TROUBLESHOOTING_GUIDE.md  QUICKSTART_INITIALIZATION.md  README.md  README_FIXES.md  README_PHASE_3_COMPLETE.md  SERIALIZATION_FIX.md  SESSION_LOADING_ERROR_FIX.md  (+13 more)
.chainlit/: config.toml
.files/c4f96d60-3b5d-49d0-8db4-8ebbe9fab243/: 90f7ebb1-9842-4d7d-9a3b-5bd9a29e8bfb.json
logs/: session_20251211_130046.jsonl
public/: dnd-theme.css
public/elements/: CharacterCard.jsx  WorldScene.jsx
src/core/: agent_specialization.py  config.py  constants.py  exceptions.py  gameplay_phase.py  types.py
src/services/: agent_context_hub.py  asset_service.py  data_service.py  gameplay_executor.py  model_service.py  (+6 more)
tests/: test_gameplay_phase.py  test_initialization_phase.py
(+28 files in other folders)
