[tool.poetry]
name = "ai-dungeon-master"
version = "0.1.0"
description = "A multi-agent AI system for D&D game mastering"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11,<4.0.0"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
langchain = "^1.0.3"
langgraph = "^1.0.2"
langchain-openai = "^1.0.1"

[tool.poetry.group.dev.dependencies]
langgraph-cli = {extras = ["inmem"], version = "^0.4.5"}
ruff = "^0.6.1"
mypy = "^1.11.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "I001", "N818"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
